--- a/build.xml
+++ b/build.xml
@@ -34,4 +34,9 @@
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target name="run" depends="init">
+        <java classname="MainMenu" failonerror="true" fork="yes">
+            <classpath refid="TestTaker.classpath"/>
+        </java>
+    </target>
 </project>
